# UHDPlayer

./: CMakeLists.txt  Callbacks.h  Controler.cpp  Controler.h  DisplayHandler.cpp  DisplayHandler.h  FileOpener.h  ImemOptionsHandler.h  MovieProperties.cpp  MovieProperties.h  PlayerConfigurationsHandler.cpp  PlayerConfigurationsHandler.h  RawDataHandler.cpp  RawDataHandler.h  ThreadsHandler.cpp  ThreadsHandler.h  Types.h  adminpanel.cpp  adminpanel.h  adminpanel.ui  config.txt  example.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  protips.txt  userpanel.cpp  userpanel.h  userpanel.ui  videopanel.cpp  videopanel.h  videopanel.ui
